fix #1045 instruction icon spacing

--- a/web/src/components/pages/contribution/contribution.css
+++ b/web/src/components/pages/contribution/contribution.css
@@ -159,7 +159,7 @@
 
         & svg {
             display: none;
-            margin: 0 10px;
+            margin: 0 10px 0 16px;
             width: 23px;
             height: 23px;
 
